--- a/src/pages/centaur-mind.astro
+++ b/src/pages/centaur-mind.astro
@@ -1,4 +1,4 @@
 ---
-// Redirect to the About page where The Centaur's Mind manifesto is located
-return Astro.redirect('/about#manifesto-section');
+// Redirect to the Company page where The Centaur's Mind philosophy is located
+return Astro.redirect('/company', 301);
 ---
